[gd_scene load_steps=4 format=3 uid="uid://dd1ox52jva55r"]

[ext_resource type="Script" path="res://Control.gd" id="1_dyych"]
[ext_resource type="Texture2D" uid="uid://b5x0ba16sprs5" path="res://B9890D59-297F-4E96-9057-3A50B23ACEC3.jpeg" id="2_36pwu"]
[ext_resource type="Texture2D" uid="uid://d1128gbw8whbp" path="res://85BFB34A-8FA8-47BD-BA7F-05B740F7C132.jpeg" id="3_j6qxm"]

[node name="Mewtwosecene2" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 382.0
offset_bottom = 225.0
script = ExtResource("1_dyych")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 381.0
offset_bottom = 227.0
texture = ExtResource("2_36pwu")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 381.0
offset_bottom = 227.0
texture = ExtResource("3_j6qxm")
expand_mode = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.564416
anchor_top = 0.213333
anchor_right = -0.564416
anchor_bottom = 0.213333
offset_left = 234.607
offset_top = 123.0
offset_right = 355.607
offset_bottom = 163.0
metadata/_edit_use_anchors_ = true

[node name="next" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 9.60663
offset_top = 4.24265
offset_right = 110.607
offset_bottom = 35.2426
text = "NEXT"
metadata/_edit_use_anchors_ = true

[node name="next2" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 9.60663
offset_top = 4.24265
offset_right = 110.607
offset_bottom = 35.2426
text = "NEXT"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control/Panel/next" to="Control" method="_on_next_pressed"]
[connection signal="pressed" from="Control/Panel/next2" to="Control" method="_on_next_2_pressed"]
